Clean File and fix navbar scroll overlap

--- a/LOZR2/web/src/style/SignUp.css
+++ b/LOZR2/web/src/style/SignUp.css
@@ -1,5 +1,7 @@
-body {
-  background-image: url("../../images/istockphoto-1136956450-612x612.jpg");
+.u-body {
+  /*background-image: url("../../images/istockphoto-1136956450-612x612.jpg");*/
+  background-image: none;
+  background-color: #D5F1FF;
 }
 
 
